--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "formik": "^2.2.6",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
+    "@types/styled-components": "^5.1.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
