--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "formik": "^2.2.6",
+    "i18next": "^20.1.0",
     "next": "10.0.5",
+    "next-i18next": "^8.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1",
-    "@types/styled-components": "^5.1.9"
+    "react-i18next": "^11.8.12",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
