--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.12",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
