--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-i18next": "^8.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-google-recaptcha-v3": "^1.9.4",
     "react-i18next": "^11.8.12",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1"
