--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   },
   "dependencies": {
     "formik": "^2.2.6",
-    "i18next": "^20.1.0",
     "next": "^10.2.0",
     "next-i18next": "^8.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-google-recaptcha-v3": "^1.9.4",
-    "react-i18next": "^11.8.12",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "yup": "^0.32.9"
