--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
