--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-google-recaptcha-v3": "^1.9.4",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.4",
     "redux-saga": "^1.1.3",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^3.0.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
