--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.4",
+    "react-toastify": "^7.0.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
