--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "next-i18next": "^8.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-google-recaptcha-v3": "^1.9.4",
     "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
+    "react-recaptcha-v3": "^2.0.1",
     "react-redux": "^7.2.4",
     "react-toastify": "^7.0.4",
     "redux-saga": "^1.1.3",
@@ -28,6 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^3.0.0",
+    "@types/react-recaptcha-v3": "^1.1.1",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
