--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "cypress open-ct"
   },
   "dependencies": {
     "formik": "^2.2.6",
@@ -24,6 +25,9 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@cypress/react": "^5.9.1",
+    "@cypress/webpack-dev-server": "^1.4.0",
+    "@testing-library/cypress": "^7.0.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-infinite-scroller": "^1.2.1",
@@ -33,13 +37,17 @@
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "cypress": "^7.5.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "5",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "5",
+    "webpack-dev-server": "3"
   }
 }
