--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   nextjs:
     build: ./
@@ -36,17 +34,22 @@ services:
       - web-root:/var/www/html
     depends_on:
       - nginx
-    command: certonly --webroot --webroot-path=/var/www/html --email jakoz123@gmail.com --agree-tos --no-eff-email --force-renewal -d find-team.com -d www.find-team.com
+    command: certonly --webroot --webroot-path=/var/www/html --email jakoz123@gmail.com --agree-tos --no-eff-email --force-renewal -d find-team.xyz -d www.find-team.xyz
 
 volumes:
   certbot-etc:
   certbot-var:
   web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/beep/find-team-front
+      o: bind
   dhparam:
     driver: local
     driver_opts:
       type: none
-      device: ./dhparam/
+      device: /home/beep/find-team-front/dhparam
       o: bind
 
 networks:
