--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,41 +1,41 @@
-proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=1h use_temp_path=off;
 
 upstream nextjs_upstream {
   server nextjs:3000;
 }
 
 server {
-        listen 80 default_server;
+        listen 80;
         listen [::]:80;
-        server_name find-team.com www.find-team.com;
+        server_name find-team.xyz www.find-team.xyz;
 
         server_tokens off;
-
-        location / {
-          rewrite ^ https://$host$request_uri? permanent;
-        }
 
         location ~ /.well-known/acme-challenge {
           allow all;
           root /var/www/html;
+        }
+
+        location / {
+          rewrite ^ https://$host$request_uri? permanent;
         }
 }
 
 server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name find-team.com www.find-team.com;
+        server_name find-team.xyz www.find-team.xyz;
 
         server_tokens off;
 
-        ssl_certificate /etc/letsencrypt/live/find-team.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/find-team.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/find-team.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/find-team.xyz/privkey.pem;
 
         ssl_buffer_size 8k;
 
         ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
 
-        ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+        ssl_protocols TLSv1.2;
         ssl_prefer_server_ciphers on;
 
         ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
@@ -47,32 +47,21 @@ server {
         ssl_stapling_verify on;
         resolver 8.8.8.8;
 
-        gzip on;
-				gzip_proxied any;
-				gzip_comp_level 4;
-				gzip_types text/css application/javascript image/svg+xml;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-
         location /api {
-					proxy_pass http://find-team.com:3003;
+          proxy_pass http://find-team.xyz:3003;
         }
 
-				location /_next/static {
-					proxy_cache STATIC;
-					proxy_pass http://nextjs_upstream;
-				}
+        location /_next/static {
+          proxy_cache STATIC;
+          proxy_pass http://nextjs_upstream;
+        }
 
         location / {
           try_files $uri @nodejs;
         }
 
         location @nodejs {
-					proxy_pass http://nextjs_upstream;
+          proxy_pass http://nextjs_upstream;
           add_header X-Frame-Options "SAMEORIGIN" always;
           add_header X-XSS-Protection "1; mode=block" always;
           add_header X-Content-Type-Options "nosniff" always;
