--- a/package.json
+++ b/package.json
@@ -9,45 +9,46 @@
     "test": "cypress open-ct"
   },
   "dependencies": {
+    "@react-input/mask": "^2.0.4",
     "formik": "^2.2.6",
-    "next": "^10.2.0",
-    "next-i18next": "^8.1.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-infinite-scroller": "^1.2.4",
-    "react-input-mask": "^2.0.4",
-    "react-recaptcha-v3": "^2.0.1",
-    "react-redux": "^7.2.4",
-    "react-toastify": "^7.0.4",
+    "i18next": "^25.0.0",
+    "next": "^14.2.28",
+    "next-i18next": "^15.4.2",
+    "react": "18",
+    "react-dom": "18",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-i18next": "^15.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "8.1.3",
+    "react-toastify": "^11.0.5",
+    "redux": "4.2.1",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.1",
-    "styled-reset": "^4.3.4",
+    "styled-components": "^6.1.17",
+    "styled-reset": "^4.5.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@cypress/react": "^5.9.1",
-    "@cypress/webpack-dev-server": "^1.4.0",
-    "@testing-library/cypress": "^7.0.6",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "@types/react-infinite-scroller": "^1.2.1",
-    "@types/react-input-mask": "^3.0.0",
-    "@types/react-recaptcha-v3": "^1.1.1",
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "babel-plugin-styled-components": "^1.12.0",
-    "cypress": "^7.5.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@cypress/react": "^9.0.1",
+    "@cypress/webpack-dev-server": "^4.0.2",
+    "@testing-library/cypress": "^10.0.3",
+    "@types/node": "^22.14.0",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "cypress": "^14.3.0",
+    "eslint": "8",
+    "eslint-config-next": "^14.2.28",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "5",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
     "webpack": "5",
-    "webpack-dev-server": "3"
-  }
+    "webpack-dev-server": "^5.2.1"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
