--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "cypress": "^14.3.0",
     "eslint": "8",
     "eslint-config-next": "^14.2.28",
